--- a/index.html
+++ b/index.html
@@ -1,298 +1,8 @@
 <!DOCTYPE html>
-<html lang="es-ES">
-	<head>
-		<title>Factura PVPC</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-		<link rel="stylesheet" href="style.css">
-		<script src="https://cdn.plot.ly/plotly-2.20.0.min.js" charset="utf-8"></script>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1463952185823163" crossorigin="anonymous"></script>
-	</head>
-	<body>
-		<div class="w3-bar w3-border w3-light-grey w3-large">
-			<a href="index.html" class="w3-bar-item w3-button w3-blue"><b>Precio Luz</b></a>
-			<a href="facturaPVPC.html" class="w3-bar-item w3-button">Factura PVPC</a>
-			<a href="help.html" class="w3-bar-item w3-button">Ayuda</a>
-			<div class="toggle w3-bar-item w3-right w3-medium">
-				Modo oscuro
-				<input type="checkbox" id="toggleDarkMode" />
-				<label class="w3-cell-middle" for="toggleDarkMode"></label>
-			</div>
-		</div>
-		<div class="w3-panel">
-			<p></p>
-		</div>
-		<div class="w3-card-4 w3-round w3-content formBackground" style="max-width:490px">
-			<div class="w3-container w3-blue w3-round">
-				<h1>Precio de la luz por horas</h1>
-			</div>
-			<h3 class="w3-margin-left">Elige el rango de fechas a consultar</h3>
-			<div class="w3-row-padding">
-				<div class="w3-half">
-					<label>Fecha de inicio</label>
-					<input class="w3-input w3-border" id="startDate" type="date">
-				</div>
-				<div class="w3-half">
-					<label>Fecha de fin</label>
-					<input class="w3-input w3-border" id="endDate" type="date">
-				</div>
-			</div>
-			<div class="w3-margin-left w3-margin-right w3-panel w3-leftbar w3-rightbar w3-border-blue" style="background-color:rgba(150,255,255,0.2)">
-				<label><p>El intervalo máximo es de un mes</p></label>
-			</div>
-			<div class="w3-padding"></div>
-		</div>
-		<div class="w3-panel">
-			<p></p>
-		</div>
-		<div class="w3-card-4 w3-round w3-content w3-row w3-center formBackground" style="max-width:1100px">
-			<div class="w3-third w3-container">
-				<h3 class="w3-bottombar w3-border-blue">Precio más bajo</h3>
-				<h1 class="w3-text-green"><span id="minCost">0.00000</span> €/kWh</h1>
-				<label id="minCostDate"></label>
-			</div>
-			<div class="w3-third w3-container">
-				<h3 class="w3-bottombar w3-border-blue">Precio medio</h3>
-				<h1 class="w3-text-yellow"><span id="middleCost">0.00000</span> €/kWh</h1>
-			</div>
-			<div class="w3-third w3-container">
-				<h3 class="w3-bottombar w3-border-blue">Precio más alto</h3>
-				<h1 class="w3-text-red"><span id="maxCost">0.00000</span> €/kWh</h1>
-				<label id="maxCostDate"></label>
-			</div>
-			<div class="w3-panel">
-				<p></p>
-			</div>
-		</div>
-		<div class="w3-panel">
-			<p></p>
-		</div>
-		<div class="w3-card-4 w3-content" style="max-width:1000px;height:500px" id="energyPricesChart"><p></p></div>
-	</body>
-	<script>
-		function detectColorScheme(){
-			var theme = "light";
-			if (localStorage.getItem("theme")) {
-				if (localStorage.getItem("theme") == "dark")
-					theme = "dark";
-			}
-			else if (!window.matchMedia)
-				return false;
-			else if (window.matchMedia("(prefers-color-scheme: dark)").matches)
-				theme = "dark";
-
-			if (theme == "dark")
-				document.documentElement.setAttribute("data-theme", "dark");
-		}
-		detectColorScheme();
-
-		const toggleDM = document.getElementById('toggleDarkMode');
-		toggleDM.addEventListener('input', e => {
-			if (e.target.checked) {
-				localStorage.setItem('theme', 'dark');
-				document.documentElement.setAttribute('data-theme', 'dark');
-			} else {
-				localStorage.setItem('theme', 'light');
-				document.documentElement.setAttribute('data-theme', 'light');
-			}
-		});
-		if (document.documentElement.getAttribute("data-theme") == "dark")
-			toggleDM.checked = true;
-	</script>
-	<script>
-		const today = new Date();
-		const starDateElement = document.getElementById("startDate")
-		const endDateElement = document.getElementById("endDate");
-		starDateElement.valueAsDate = today;
-		endDateElement.valueAsDate = today;
-
-		function dateToString(_date) {
-			return _date.toISOString().split("T")[0];
-		}
-
-		function animateValue(obj, end, duration) {
-			duration = duration * 1000
-			const start = Number(obj.innerHTML);
-			let startTimestamp = null;
-			const step = (timestamp) => {
-				if (!startTimestamp)
-					startTimestamp = timestamp;
-				const progress = Math.min((timestamp - startTimestamp) / duration, 1);
-				obj.innerHTML = (progress * (end - start) + start).toFixed(5);
-				if (progress < 1)
-					window.requestAnimationFrame(step);
-			};
-			window.requestAnimationFrame(step);
-		}
-
-		var oldDates = null;
-		function updateLightPriceChart(_startDate, _endDate) {
-			function displayChart(jsonData) {
-				const valuesJson = jsonData["included"][0]["attributes"]["values"];
-				var minCost = 1000;
-				var maxCost = -1000;
-				var minCostDate = null;
-				var maxCostDate = null;
-				var sumCosts = 0;
-				const dates = valuesJson.map(function(value) {
-					return new Date(value.datetime);
-				});
-				const energyCosts = valuesJson.map(function(value, index) {
-					const eurPerkWh = value.value / 1000.0;
-					if (eurPerkWh < minCost)
-					{
-						minCost = eurPerkWh;
-						minCostDate = dates[index];
-					}
-					if (eurPerkWh > maxCost)
-					{
-						maxCost = eurPerkWh;
-						maxCostDate = dates[index];
-					}
-					sumCosts += eurPerkWh;
-					return eurPerkWh;
-				});
-				const zeros = valuesJson.map(function(value, index) {
-					const date = dates[index];
-					if (oldDates == null || date < oldDates[0] || date > oldDates[oldDates.length-1])
-						return 0;
-					else
-						return energyCosts[index];
-				});
-
-				var energyPricesChart = document.getElementById('energyPricesChart');
-				const maxChart = maxCost * 1.05;
-				const minChart = minCost > 0 ? 0 : minCost;
-
-				function newPlot() {
-					const style = window.getComputedStyle(document.body);
-					const bgColor = style.getPropertyValue('background-color');
-					const textColor = style.getPropertyValue('color');
-					const layout = {
-						title: {
-							text: jsonData.data.type,
-							font: {
-								color: textColor
-							}
-						},
-						xaxis: {
-							title: 'Fecha',
-							color: textColor,
-							range: [dates[0], dates[dates.length-1]]
-						},
-						yaxis: {
-							title: 'PVPC (€/kWh)',
-							color: textColor,
-							range: [minChart, maxChart]
-						},
-						plot_bgcolor: bgColor,
-						paper_bgcolor: bgColor
-					};
-					const config = {
-						responsive: true,
-						modeBarButtonsToRemove: ['select2d', 'lasso2d', 'zoomIn2d', 'zoomOut2d', 'autoScale2d' ],
-						//displayModeBar: false
-					};
-					const data = [
-						{
-							x: dates,
-							y: zeros,
-							line: {shape: 'spline'},
-							//mode: 'lines+markers',
-						}
-					];
-					Plotly.newPlot(energyPricesChart, data, layout, config).then(function() {
-						Plotly.animate(energyPricesChart, {
-								data: [{y: energyCosts}]
-							}, {
-								transition: {
-									duration: 500,
-									easing: 'cubic-in-out'
-								}
-							}
-						);
-					});
-
-					animateValue(document.getElementById("minCost"), minCost, 0.5);
-					animateValue(document.getElementById("maxCost"), maxCost, 0.5);
-					animateValue(document.getElementById("middleCost"), sumCosts / energyCosts.length, 0.5);
-					document.getElementById("minCostDate").innerHTML = new Intl.DateTimeFormat('es-ES', { dateStyle: 'full', timeStyle: 'short' }).format(minCostDate);
-					document.getElementById("maxCostDate").innerHTML = new Intl.DateTimeFormat('es-ES', { dateStyle: 'full', timeStyle: 'short' }).format(maxCostDate);
-				}
-
-				if (oldDates != null)
-				{
-					Plotly.animate(energyPricesChart, {
-							layout: {
-								xaxis: {
-									range: [dates[0], dates[dates.length-1]]
-								},
-								yaxis: {
-									range: [minChart, maxChart]
-								}
-							}
-						}, {
-							transition: {
-								duration: 500,
-								easing: 'cubic-in-out'
-							}
-						}
-					).then(newPlot);
-				}
-				else
-					newPlot();
-				oldDates = dates;
-			}
-
-			const url = "https://apidatos.ree.es/es/datos/mercados/precios-mercados-tiempo-real?start_date=" + dateToString(_startDate) + "T00:00&end_date=" + dateToString(_endDate) + "T23:59&time_trunc=hour";
-			fetch(url).then(function(response) {
-				return response.json();
-			}).then(function(data) {
-				displayChart(data);
-			}).catch(function(err) {
-				console.error('Ferch Error: ', err);
-			});
-		}
-
-		function refreshLightPricesChart() {
-			if (starDateElement.valueAsDate != null)
-			{
-				var tomorrow = new Date();
-				tomorrow.setDate(tomorrow.getDate() + 1);
-				var maxLimit = starDateElement.valueAsDate;
-				maxLimit.setMonth(maxLimit.getMonth() + 1);
-				if (tomorrow < maxLimit)
-					maxLimit = tomorrow;
-				endDateElement.setAttribute('max', dateToString(maxLimit));
-				endDateElement.setAttribute('min', dateToString(starDateElement.valueAsDate));
-			}
-			else
-			{
-				endDateElement.removeAttribute('max');
-				endDateElement.removeAttribute('min');
-			}
-
-			if (endDateElement.valueAsDate != null)
-			{
-				var minLimit = endDateElement.valueAsDate;
-				minLimit.setMonth(minLimit.getMonth() - 1);
-				minLimit.setDate(minLimit.getDate() + 1);
-				starDateElement.setAttribute('min', dateToString(minLimit));
-				starDateElement.setAttribute('max', dateToString(endDateElement.valueAsDate));
-			}
-			else
-			{
-				starDateElement.removeAttribute('max');
-				starDateElement.removeAttribute('min');
-			}
-
-			if (starDateElement.valueAsDate != null && endDateElement.valueAsDate != null)
-				updateLightPriceChart(starDateElement.valueAsDate, endDateElement.valueAsDate);
-		}
-		refreshLightPricesChart();
-
-		starDateElement.addEventListener('change', refreshLightPricesChart, false);
-		endDateElement.addEventListener('change', refreshLightPricesChart, false);
-	</script>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://yosoymin.github.io/facturaPVPC'" />
+  </head>
+  <body>
+  </body>
 </html>
