--- a/help.html
+++ b/help.html
@@ -1,139 +1,8 @@
 <!DOCTYPE html>
-<html lang="es-ES">
-	<head>
-		<title>Factura PVPC</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-		<link rel="stylesheet" href="style.css">
-		<script src="https://cdn.plot.ly/plotly-2.20.0.min.js" charset="utf-8"></script>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1463952185823163" crossorigin="anonymous"></script>
-	</head>
-	<body>
-		<div class="w3-bar w3-border w3-light-grey w3-large">
-			<a href="index.html" class="w3-bar-item w3-button">Precio Luz</a>
-			<a href="facturaPVPC.html" class="w3-bar-item w3-button">Factura PVPC</a>
-			<a href="help.html" class="w3-bar-item w3-button w3-blue"><b>Ayuda</b></a>
-			<div class="toggle w3-bar-item w3-right w3-medium">
-				Modo oscuro
-				<input type="checkbox" id="toggleDarkMode" />
-				<label class="w3-cell-middle" for="toggleDarkMode"></label>
-			</div>
-		</div>
-		<div class="w3-panel">
-			<p></p>
-		</div>
-		<div class="w3-card-4 w3-round w3-content formBackground" style="max-width:850px">
-			<div class="w3-container w3-blue w3-round">
-				<h1>Instrucciones para conseguir los ficheros CSV</h1>
-			</div>
-			<h2 class="w3-margin-left">e-distribución o Enphase</h2>
-			<div class="w3-margin-left w3-w3-panel w3-large">
-				<p>
-					Actualmente la web soporta dos tipos de fichero CSV con datos de consumo y producción de energía: e-distribución y Enphase.
-				</p>
-				<p>
-					Para simular la factua de la luz con mayor precisión es recomendable usar el CSV de e-distribución ya
-					que usa los datos reales que la distribuidora envía a la comercializadora de electricidad para generar
-					la factura.
-				</p>
-				<p>
-					Sin embargo, en caso de tener un contrato de autoconsumo y tu instalación fotovoltaica es de Enphase, puede ser interesante 
-					usar el CSV de Enphase para	simular el importe de la factura en el mercado regulado PVPC si no tuvieramos placas fotovoltaicas.
-				</p>
-			</div>
-			<div class="w3-padding"></div>
-		</div>
-		<div class="w3-panel">
-			<p></p>
-		</div>
-		<div class="w3-card-4 w3-round w3-content formBackground" style="max-width:850px">
-			<button onclick="toogleHelp('edistribucion')" class="w3-button w3-block w3-blue w3-left-align w3-round"><h2>Conseguir CSV de e-distribución</h2></button>
-			<div class="w3-margin-left w3-w3-panel w3-large w3-hide" id="edistribucion">
-				<p>
-					1. Dirígete a la web de <a href="https://zonaprivada.edistribucion.com/areaprivada/s/wp-register?language=es" target="_blank">e-distribución</a> y registrate.
-				</p>
-				<p>
-					2. Una vez entres en tu cuenta de e-distribución selecciona el recuadro de "TU CONSUMO".
-				</p>
-				<p>
-					3. Selecciona el contrato del que quieres simular la factura y pulsa en "Consultar Curva".
-				</p>
-				<p>
-					4. Selecciona el periodo de tiempo que quieres simular y pulsa "CONSULTAR".
-				</p>
-				<p>
-					5. Cuando veas la curva de consumos, bajo la gráfica, selecciona la opción "Todas las magnitudes de energía" y pulsa sobre
-					el botón "Descargar .CSV consumos"
-				</p>
-				<p>
-					<a href="https://telegra.ph/Descarga-fichero-csv-de-e-distribuci%C3%B3n-12-28" target="_blank">Aquí</a> tienes una web donde explica todo el proceso de forma muy visual.
-				</p>
-				<div class="w3-padding"></div>
-			</div>
-		</div>
-		<div class="w3-panel">
-			<p></p>
-		</div>
-		<div class="w3-card-4 w3-round w3-content formBackground" style="max-width:850px">
-			<button onclick="toogleHelp('Enphase')" class="w3-button w3-block w3-blue w3-left-align w3-round"><h2>Conseguir CSV de Enphase</h2></button>
-			<div class="w3-margin-left w3-w3-panel w3-large w3-hide" id="Enphase">
-				<p>
-					1. Accede a tu cuenta de <a href="https://enlighten.enphaseenergy.com">Enphase</a>.
-				</p>
-				<p>
-					2. Entra en el menú desplegable superior derecho -> Sistema -> Informes.
-				</p>
-				<p>
-					3. Pulsa en el desplegable "Generación Diaria" -> "Energía Neta Mensual".
-				</p>
-				<p>
-					3. Haz click en el icono del sobre que hay a la derecha. Ésto te mandará un correo electrónico a tu cuenta con el fichero CSV.
-				</p>
-				<p>
-					<a href="https://www4.enphase.com/es-es/support/%C2%BFc%C3%B3mo-genero-un-informe" target="_blank">Aquí</a> puedes encontrar la documentación oficial de Enphase.
-				</p>
-				<div class="w3-padding"></div>
-			</div>
-		</div>
-	</body>
-	<script>
-		function detectColorScheme(){
-			var theme = "light";
-			if (localStorage.getItem("theme")) {
-				if (localStorage.getItem("theme") == "dark")
-					theme = "dark";
-			}
-			else if (!window.matchMedia)
-				return false;
-			else if (window.matchMedia("(prefers-color-scheme: dark)").matches)
-				theme = "dark";
-
-			if (theme == "dark")
-				document.documentElement.setAttribute("data-theme", "dark");
-		}
-		detectColorScheme();
-
-		const toggleDM = document.getElementById('toggleDarkMode');
-		toggleDM.addEventListener('input', e => {
-			if (e.target.checked) {
-				localStorage.setItem('theme', 'dark');
-				document.documentElement.setAttribute('data-theme', 'dark');
-			} else {
-				localStorage.setItem('theme', 'light');
-				document.documentElement.setAttribute('data-theme', 'light');
-			}
-		});
-		if (document.documentElement.getAttribute("data-theme") == "dark")
-			toggleDM.checked = true;
-	</script>
-	<script>
-		function toogleHelp(id) {
-			var x = document.getElementById(id);
-			if (x.className.indexOf("w3-show") == -1)
-				x.className += " w3-show";
-			else
-				x.className = x.className.replace(" w3-show", "");
-		}
-	</script>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://yosoymin.github.io/facturaPVPC/#/help'" />
+  </head>
+  <body>
+  </body>
 </html>
